2000-06-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Death and resurrection.

2000-06-25  Tristan Tarrant  <tarrant_tristan@emc.com>

	* Makefile.am, exult.cc: use VERSION instead of RELNUM
	* exult.cc, gamewin.cc: move config stuff about splash to exult.cc

2000-06-24  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps.cc (Stats_gump_object): Show name.
	* exult.cc: 'z' key brings up statistics.
	* Weapon readied automatically.  Weapons.dat, armor.dat read.
	* Hunger (everyone's favorite feature!)
	* More fiddling (possibly improvement) in followers of Avatar.

2000-06-22  Jeff Freedman  <jeff@patches.simutech.com>

	* effects.cc: Untested: Faster projectiles.  Run usecode at end.
	* combat.cc: Show 'strike' sequence during attack (untested).

2000-06-17  Jeff Freedman  <jeff@amy.nerble.net>

	* Scaling:  Set width=320, height=200, scale=2 in config file.

2000-06-13  Jeff Freedman  <jeff@amy.nerble.net>

	* 2 usecode intrinsics implemented:  halt_scheduled() and
	in_usecode().  These are a bit risky...

2000-06-12  Jeff Freedman  <jeff@amy.nerble.net>

	* Conversations look more like the original U7 now.

2000-06-11  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc:  Set screen size in .exult.cfg.
	* Weather eggs:  Clouds.
	* Weather eggs:  Storm.

2000-06-08  Coder Infidel  <coder_infidel@hotmail.com>

	* actors.cc: Fixed warning
	* exult.cc, mouse.cc, mouse.h: use red mouse pointer in combat mode
	* gamewin.cc: added config to skip splash screen

2000-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Rewrote egg handling.
	* VERY simple combat.  (1 hit = death!)

2000-06-07  Coder Infidel  <coder_infidel@hotmail.com>

	* actors.cc: remove unused variable
	* actors.h: updated some comments about NPC frames
	* Makefile.win32: added schedule.o
	* objs.h, schedule.h: fixed compile error for Win32

2000-06-06  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps.cc: Fixed initial object placement.
	* drag.cc: Handle 'quantity' objects.
